--- a/Tarefa_Exercício_2_Trocador_de_Calor.ipynb
+++ b/Tarefa_Exercício_2_Trocador_de_Calor.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "Q4rxtjKKCSVZ"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "PWIY1PGq9Is1"
       },
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "0NTJi_Y6x7zi"
       },
@@ -59,7 +59,7 @@
         "\n",
         "# Temperatures (hot streams first, cold after and starting with H/C for hot and cold) otherwise need to adapt the code\n",
         "Prop = {'H1':[30, 2 ],'H2':[60, 1 ],'H3':[30, 2],\n",
-        "        'H4':[30,1 ], 'H5':[50,1 ], 'H5':[35,2 ],\n",
+        "        'H4':[30,1 ], 'H5':[50,1 ], 'H6':[35,2 ],\n",
         "        'H7':[30,0.4 ], 'H8':[100,0.5 ],\n",
         "        'C1':[20,1 ],'C2':[60, 1 ],'C3':[35, 2],\n",
         "        'C4':[30,2 ],'C5':[60, 2], 'C6':[50, 1],\n",
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "sQIGR7YpyBv6"
       },
@@ -244,18 +244,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "id": "uXh6CEi5DgwJ"
       },
       "outputs": [],
       "source": [
-        "w = [0.3]*4+[0.8]*4+[0.5]*4+[1]*12"
+        "w = [0.3]*4+[0.8]*4+[0.5]*4+[1]*12\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "f8H99CS9AOoB"
       },
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "sNZ4ruzv-La8"
       },
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "id": "ckFKKQdNAVO1"
       },
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "Nbr0xLBdITa5"
       },
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "id": "Jsfc_Dr5MmuX"
       },
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "id": "yibq0wsUThgD"
       },
@@ -400,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
         "id": "RRHG1BVqiNaZ"
       },
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {
         "id": "lZT7tTIPRNz4"
       },
@@ -474,36 +474,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 14,
       "metadata": {
         "id": "fHwM7maM7L7K",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 415
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a248c761-26f6-4231-eb93-39d96fdfc7f6"
+        "outputId": "7ec9e20e-8fa7-4159-b9fe-08f614afa952"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-6-5e51aa80774e>:85: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "<ipython-input-4-5e51aa80774e>:85: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "  LMDT = (d1 - d2) / np.log(d1/d2)\n",
+            "<ipython-input-4-5e51aa80774e>:139: RuntimeWarning: invalid value encountered in double_scalars\n",
             "  LMDT = (d1 - d2) / np.log(d1/d2)\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-b408a6747047>\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mBestAll\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e99\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrun\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mruntime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m   \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobMin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobPars\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0minitial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrial\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobMin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobPars\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mMIN\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mMAX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m   \u001b[0mGlobMin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobPars\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBestSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGlobMin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobPars\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-12-58b492b3bdaa>\u001b[0m in \u001b[0;36minitial\u001b[0;34m(fitness, trial, f, Foods, GlobMin, GlobPars, MIN, MAX)\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mFoodNumber\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFoodNumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mFoods\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrial\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrial\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mMIN\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mMAX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0mGlobMin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-11-6472f0916fb0>\u001b[0m in \u001b[0;36minit\u001b[0;34m(index, Foods, trial, f, fitness, MIN, MAX)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0msolution\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFoods\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msolution\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m   \u001b[0mfitness\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mCalcFit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0mtrial\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-6-5e51aa80774e>\u001b[0m in \u001b[0;36mCost_find\u001b[0;34m(w, Target, Prop, Util, n_trocas, ans)\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mxt_hot\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0mCP_c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mProp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcold\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0mCP_h\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mProp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhot\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m         \u001b[0mQ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCP_c\u001b[0m\u001b[0;34m*\u001b[0m \u001b[0mdx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mxt_hot\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCP_h\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mxt_hot\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mCP_c\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mTemp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcold\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'H6'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "run 1 GBest= 1926263.2851035027  \n",
+            "\n",
+            "run 2 GBest= 1972820.31847898  \n",
+            "\n",
+            "run 3 GBest= 1870722.9278488928  \n",
+            "\n",
+            "run 4 GBest= 1910015.9864353817  \n",
+            "\n",
+            "Means of 4 runs: 1919955.6294666892 \n",
+            "\n"
           ]
         }
       ],
@@ -560,13 +563,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "metadata": {
         "id": "qiYA3ag5XQKG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed0da240-7af5-4e92-ae55-397e72aad9fe"
+        "outputId": "1c5af700-6915-4014-a5da-b4a242908eee"
       },
       "outputs": [
         {
@@ -577,7 +580,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 15
         }
       ],
       "source": [
@@ -586,25 +589,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "metadata": {
         "id": "yZMITaaL074s",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d91db79-d689-45c6-e517-39d0ae2817f0"
+        "outputId": "6563fad9-b603-4f83-ef86-f7f57ef4bbcf"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-b909b825f194>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mCost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mConditions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTemp\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mCost_find\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_best\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cost'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mCost\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Conditions'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mConditions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Temp'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GlobPars'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGlobPars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'x_best' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cost 1910015.9864353817\n",
+            "Conditions [['C7', 'C2', 'C3'], ['C7', 'C3', 'No'], ['C2', 'C7', 'C5'], ['C5', 'C1', 'C4'], ['C4', 'C7', 'C2'], ['No', 'C6', 'C6'], ['No', 'C1', 'C6'], ['C2', 'No', 'No']]\n",
+            "Temp {'H1': [180, 169.38208372880393, 135.44292184620065, 135.44292184620065], 'H2': [280, 210.71124447316652, 119.93471966086932, 119.93471966086932], 'H3': [180, 118.87835204619776, 118.87835204619776, 114.2306123933064], 'H4': [140, 53.27330483085298, 53.27330483085298, 53.27330483085298], 'H5': [220, 120.0, 120.0, 120.0], 'H6': [180, 180, 109.57299892274385, 109.57299892274385], 'H7': [200, 200, 99.82638964006438, 99.82638964006438], 'H8': [120, 120, 120, 120], 'C1': [40, 40, 190.26041553990345], 'C2': [100, 130.5608239769011, 130.5608239769011, 147.53040491820275, 147.53040491820275], 'C3': [40, 195.61689967822377, 195.61689967822377], 'C4': [50, 216.66666666666666, 216.66666666666666], 'C5': [50, 93.36334758457352, 95.68721741101919], 'C6': [90, 139.2989007540793, 139.2989007540793, 139.2989007540793], 'C7': [160, 165.30895813559803, 234.59771366243154, 234.59771366243154, 234.59771366243154]}\n",
+            "GlobPars [0.93739423 0.36190074 0.43273306 0.93319585 0.48640958 0.11772973\n",
+            " 0.32855261 0.93741711 0.71589375 0.74998203 0.17361232 0.61514684\n",
+            " 0.62208475 0.97762452 0.34138504 0.0426618  0.82742462 0.84925772\n",
+            " 0.01898952 0.1482026  0.83999365 0.36617598 0.09273426 0.0039698\n",
+            " 0.10112301 0.32323011 0.94948759 0.43305472 0.56735328 0.32106331\n",
+            " 0.58211093 0.27135013 0.04426419 0.86726695 0.59626443 0.49485279\n",
+            " 1.         0.36429999 0.80696292 0.6475232  0.56341601 0.00616418\n",
+            " 0.01263413 0.71552579 0.47117352 0.86805218 0.34897092 0.57634244]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-4-5e51aa80774e>:139: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "  LMDT = (d1 - d2) / np.log(d1/d2)\n"
           ]
         }
       ],
@@ -618,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "F6hfb5yg0qXi"
       },
